CICD commit